@@ -1,3 +1,11 @@
+2005-01-09  Davyd Madeley  <davyd@madeley.id.au>
+
+	* gweather-dialog.c:
+	* weather.c:
+	* weather-wx.c:
+	* weather.h: Support animated radar images. Closes bug #149380.
+	  Patch from Jonathan Brandmeyer <jbrandmeyer@earthlink.net>.
+
 2005-01-03  Davyd Madeley  <davyd@madeley.id.au>
 
 	* weather.c: use g_locale_from_utf8 for displaying date
